--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="{{ url_for('static', filename='data.js') }}"></script>
+ <!--  <script src="{{ url_for('static', filename='data.js') }}"></script> -->
 </head>
 <style type="text/css">
 
